move facilitator resources to site data, fix horizontal scroll on mobile view, and update Readme with info on editing content

--- a/_sass/_facilitate.scss
+++ b/_sass/_facilitate.scss
@@ -307,8 +307,11 @@ section#faqs {
         }
       }
     }
-
-
   }
+}
+
+.row {
+  margin-right: 0 !important;
+  margin-left: 0 !important;
 }
 
